tests/NormalTests/paczka1/fuzzy1/86138593.err
Error in line 5: A1 S46 18,2
Error in line 7: A1 S46 46,1
Error in line 9: RVsK A1 87,7
Error in line 19: A1 S46 216,7
Error in line 21: r5GiF0fd9t A362 92,5
Error in line 26: A1 S46 65,9
Error in line 32: A1 A864 61,6
Error in line 34: A1 A864 125,7
Error in line 36: A1 A362 1,8
Error in line 39: A1 A362 0,1
